--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src",
-    "./__tests__/setupTests.ts"
-  ]
+  "include": ["src", "./__tests__/setupTests.ts"]
 }
